# Matrix-Multiplication-Threads

./: CMakeLists.txt  Makefile  README.md  a.txt  b.txt  c_1  main.c
ThreadMaker/: Threadmaker.c
constants/: constants.h
dataStructures/: dataStructure.c  dataStructure.h
debug/: debug.c  debug.h
executers/: executers.c  executers.h
fileHandler/: fileHandler.c  fileHandler.h
memoryManagement/: memoryManagement.c  memoryManagement.h  memoryMangement.c
memoryManager/: memoryMangement.c
threadMaker/: threadMaker.c  threadMaker.h
timeCalculator/: timeCalculator.c  timeCalculator.h
